# voles

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  scalar_solutions.tex  solver_example_VIDE.ipynb  solver_example_VIE_1.ipynb  solver_example_VIE_2.ipynb  test_all_solvers.ipynb  volterra_collocation_solver.py  volterra_collocation_solvers.py
.github/workflows/: bench.yml  build-wheels.yml  docs-examples.yml  docs.yml  publish-stub.yml  tests-linux.yml  tests-macos.yml  tests-windows.yml  tests.yml
api/function_vide/: index.html
api/function_vie1/: index.html
api/function_vie2/: index.html
api/optimal_graded_mesh/: index.html
api/solvers/: index.html
api/vide/: index.html
api/vie1/: index.html
api/vie2/: index.html
benchmarks/: bench_solvers.py  index.html  make_table.py  plot_results.py
dev/bench/: data.js
dlang/: meson.build  meson.options
dlang/source/: utility.d  volterra_function_solvers.d  volterra_solvers.d
docs/: benchmarks.md  coupled_vector_solutions.tex  getting_started.md  index.md  plot_piecewise_polynomial.py
docs/api/: function_vide.md  function_vie1.md  function_vie2.md  optimal_graded_mesh.md  solve_vide.md  solve_vie1.md  solve_vie2.md  solvers.md  vide.md  vie1.md  vie2.md
docs/examples/: complex.md  function_solvers.md  matrix_vector.md  polynomial_solutions.md  vide.md  vie1.md  vie2.md
examples/complex/: index.html
examples/function_solvers/: index.html
examples/matrix_vector/: index.html
examples/polynomial_solutions/: index.html
examples/vide/: index.html
examples/vie1/: index.html
examples/vie2/: index.html
getting_started/: index.html
notebooks/: solver_example_VIDE.ipynb  solver_example_VIE_1.ipynb  solver_example_VIE_2.ipynb  test_all_solvers.ipynb
search/: search_index.json
src/voles/: __init__.py  _callable_solvers.py  _complex.py  _dlang.py  _numba_solvers.py  _solution.py  solvers.py
src/volterra_equation_solvers/: __init__.py  _callable_solvers.py  _dlang.py  solvers.py
stub/: README.md  pyproject.toml
stub/src/volterra_equation_solvers/: __init__.py
tests/: check_convergence.py  conftest.py  test_coll_nodes.py  test_complex.py  test_complexity.py  test_function_solvers.py  test_input_validation.py  test_matrix_valued.py  test_show_warnings.py  test_vide.py  test_vie1.py  test_vie2.py
