[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "volterra-equation-solvers"
version = "0.2.0"
description = "Collocation-method solvers for Volterra integral and integro-differential equations"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Aaron D. Trout", email = "atrout@chatham.edu" },
]
requires-python = ">=3.10"
keywords = ["volterra", "integral equations", "collocation", "numerical methods", "scientific computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
numba = [
    "numba",
    "scipy",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.urls]
Homepage = "https://github.com/trout314/volterra-equation-solvers"
Repository = "https://github.com/trout314/volterra-equation-solvers"
Documentation = "https://trout314.github.io/volterra-equation-solvers"
Changelog = "https://github.com/trout314/volterra-equation-solvers/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/trout314/volterra-equation-solvers/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/volterra_equation_solvers"]

# ---------------------------------------------------------------------------
# Building the D extension (volterra_dlang.so / .dylib / .dll)
#
# The D extension is required. Requires a D compiler (ldc2) and meson+ninja:
#
#   meson setup dlang/build dlang
#   meson compile -C dlang/build
#
# Then copy the shared library into the package:
#   Linux:   cp dlang/build/volterra_dlang.so   src/volterra_equation_solvers/
#   macOS:   cp dlang/build/volterra_dlang.dylib src/volterra_equation_solvers/
#   Windows: copy dlang\build\volterra_dlang.dll src\volterra_equation_solvers\
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
