[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voles"
version = "0.6.0"
description = "Collocation-method solvers for Volterra integral and integro-differential equations"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Aaron D. Trout", email = "atrout@chatham.edu" },
]
requires-python = ">=3.10"
keywords = ["volterra", "integral equations", "collocation", "numerical methods", "scientific computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
# The fully-capable install (recommended). scipy is already a core
# dependency; this extra adds the numba JIT fallback for non-standard
# collocation settings not compiled into the D extension.
full = [
    "numba",
]
numba = [
    "numba",
]
# Retained for backwards compatibility: scipy is now a core dependency,
# so `voles[callable]` resolves to the same thing as a plain install.
callable = [
    "scipy",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "pytest-markdown-docs",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.urls]
Homepage = "https://github.com/trout314/voles"
Repository = "https://github.com/trout314/voles"
Documentation = "https://trout314.github.io/voles"
Changelog = "https://github.com/trout314/voles/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/trout314/voles/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/voles"]
artifacts = ["*.so", "*.dylib", "*.dll"]

# ---------------------------------------------------------------------------
# Building the D extension (volterra_dlang.so / .dylib / .dll)
#
# The D extension is required. Requires a D compiler (ldc2) and meson+ninja:
#
#   meson setup dlang/build dlang
#   meson compile -C dlang/build
#
# Then copy the shared library into the package:
#   Linux:   cp dlang/build/volterra_dlang.so   src/voles/
#   macOS:   cp dlang/build/volterra_dlang.dylib src/voles/
#   Windows: copy dlang\build\volterra_dlang.dll src\voles\
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
