[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "volterra-equation-solvers"
version = "0.4.1"
description = "Deprecation shim: this package has been renamed to 'voles'. Install voles instead."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Aaron D. Trout", email = "atrout@chatham.edu" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "voles>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/trout314/voles"
Repository = "https://github.com/trout314/voles"

[tool.hatch.build.targets.wheel]
packages = ["src/volterra_equation_solvers"]
